feat: Implemented custom cell-formatting functionality.